--- a/client/src/components/Message/Message.css
+++ b/client/src/components/Message/Message.css
@@ -1,12 +1,10 @@
-.messageBox {
+  .messageBox {
     background: #F3F3F3;
-    border-radius: 0 14px;
-    padding:5px 9px;
+    border-radius: 20px;
+    padding: 5px 20px;
     color: white;
     display: inline-block;
     max-width: 80%;
-    
-    
   }
   
   .messageText {
@@ -24,8 +22,7 @@
   .messageContainer {
     display: flex;
     justify-content: flex-end;
-    flex-direction: column;
-    padding: 0 3%;
+    padding: 0 5%;
     margin-top: 3px;
   }
   
@@ -37,12 +34,13 @@
     letter-spacing: 0.3px;
   }
   
-  .pl-7 {
-    padding-left: 7px;
-    display:inline;
+  .pl-10 {
+    padding-left: 10px;
   }
   
-
+  .pr-10 {
+    padding-right: 10px;
+  }
   
   .justifyStart {
     justify-content: flex-start;
@@ -52,27 +50,18 @@
     justify-content: flex-end;
   }
   
-  .colorGreyishBlack {
-    color: #2b2929ee;
+  .colorYellow {
+    color:rgb(248,157,0);
   }
   
-  .colorful {
-    font-family: Arial, Helvetica, sans-serif;
-    background:linear-gradient(98.37deg, red  0.99%,blue, red 100%);
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-
+  .colorRed {
+    color: rgb(220,53,99);
   }
   
-  .backgroundcolorful {
-    background-color:rgba(255, 153, 0, 0.713);
-    
-    /* display: inline; */
+  .backgroundBlue {
+    /* background: #2979FF; */
   }
   
   .backgroundLight {
-    /* background:none; */
-    align-items: center;
-    margin-left: 20%;
-    
+    background: #F3F3F3;
   }
